--- a/assets/editor.css
+++ b/assets/editor.css
@@ -1,7 +1,6 @@
 .playground-monaco {
   position: relative;
   background-color: #151518;
-  border-radius: 12px;
   overflow: hidden;
 }
 
@@ -10,8 +9,8 @@
   content: "";
   position: absolute;
   left: 0;
-  width: 110%;
-  height: 14px;
+  width: 100%;
+  height: 12px;
   pointer-events: none;
   z-index: 2;
 }
@@ -38,5 +37,5 @@
 
 .playground-monaco .monaco-editor,
 .playground-monaco .monaco-editor .overflow-guard {
-  border-radius: 12px;
+  border-radius: 0;
 }
